# zigbee-rs

./: .gitignore  BUILD.md  Cargo.toml  README.md
.github/workflows/: book.yml  build-tc32.yml  ci.yml
docs/book/: book.toml
docs/book/src/: SUMMARY.md  introduction.md
docs/book/src/advanced/: coordinator-router.md  nv-storage.md  ota.md  power.md  security.md
docs/book/src/core-concepts/: aps.md  bdb.md  builder.md  event-loop.md  mac.md  nwk.md  zdo.md
docs/book/src/getting-started/: architecture.md  first-device.md  quickstart.md
docs/book/src/platform-guides/: esp32.md  nrf.md  phy6222.md  telink.md
docs/book/src/reference/: api.md  errors.md  glossary.md  pib.md  zcl-table.md
docs/book/src/zcl-clusters/: closures-security.md  custom-clusters.md  foundation.md  general.md  hvac.md  lighting.md  measurement.md  smart-energy.md
examples/bl702-sensor/: .gitignore  Cargo.toml  README.md  build.rs  memory.x
examples/bl702-sensor/src/: main.rs
examples/cc2340-sensor/: Cargo.toml  README.md  build.rs  memory.x
examples/cc2340-sensor/src/: main.rs
examples/efr32mg1-sensor/: Cargo.toml  README.md  build.rs  device.x  memory.x
examples/efr32mg1-sensor/.cargo/: config.toml
examples/efr32mg1-sensor/src/: flash_nv.rs  main.rs  stubs.rs  time_driver.rs  vectors.rs
examples/efr32mg21-sensor/: Cargo.toml  README.md  build.rs  device.x  memory.x
examples/efr32mg21-sensor/.cargo/: config.toml
examples/efr32mg21-sensor/src/: flash_nv.rs  main.rs  stubs.rs  time_driver.rs  vectors.rs
examples/esp32c6-sensor/: Cargo.toml  README.md
examples/esp32c6-sensor/.cargo/: config.toml
examples/esp32c6-sensor/src/: main.rs  time_driver.rs
examples/esp32h2-sensor/: Cargo.toml  README.md
examples/esp32h2-sensor/src/: main.rs
examples/mock-coordinator/: Cargo.toml  README.md
examples/mock-coordinator/src/: main.rs
examples/mock-light/: Cargo.toml  README.md
examples/mock-light/src/: main.rs
examples/mock-sensor/: Cargo.toml  README.md
examples/mock-sensor/src/: main.rs
examples/mock-sleepy-sensor/: Cargo.toml  README.md
examples/mock-sleepy-sensor/src/: main.rs
examples/nrf52833-sensor/: README.md
examples/nrf52833-sensor/.cargo/: config.toml
examples/nrf52833-sensor/src/: main.rs
examples/nrf52840-bridge/: README.md
examples/nrf52840-router/: README.md
examples/nrf52840-sensor/: Cargo.toml  README.md
examples/nrf52840-sensor-uf2/: Cargo.toml  README.md  build.rs  memory.x
examples/nrf52840-sensor-uf2/.cargo/: config.toml
examples/nrf52840-sensor-uf2/src/: main.rs
examples/nrf52840-sensor/.cargo/: config.toml
examples/nrf52840-sensor/src/: main.rs  sht31.rs
examples/phy6222-sensor/: Cargo.toml  README.md
examples/phy6222-sensor/src/: adc.rs  flash_nv.rs  i2c.rs  main.rs
examples/telink-b91-sensor/: Cargo.toml  README.md  build.rs  memory.x
examples/telink-b91-sensor/.cargo/: config.toml
examples/telink-b91-sensor/src/: main.rs
examples/telink-tlsr8258-sensor/: Cargo.toml  README.md  build.rs  memory.x
examples/telink-tlsr8258-sensor/.cargo/: config.toml
examples/telink-tlsr8258-sensor/src/: main.rs  stubs.rs
phy6222-hal/src/: lib.rs  regs.rs  sleep.rs
tests/: Cargo.toml
tests/src/: aps_tests.rs  cluster_tests.rs  integration_tests.rs  lib.rs  mac_tests.rs  nwk_tests.rs  ota_tests.rs  runtime_tests.rs  types_tests.rs
zigbee/: Cargo.toml
zigbee-aps/: Cargo.toml
zigbee-aps/src/: aib.rs  apsde.rs  apsme.rs  binding.rs  fragment.rs  frames.rs  group.rs  lib.rs  security.rs
zigbee-bdb/: Cargo.toml
zigbee-bdb/src/: attributes.rs  finding_binding.rs  formation.rs  lib.rs  state_machine.rs  steering.rs  touchlink.rs
zigbee-mac/: Cargo.toml
zigbee-mac/src/: frames.rs  lib.rs  pib.rs  primitives.rs
zigbee-mac/src/bl702/: driver.rs  mod.rs
zigbee-mac/src/cc2340/: driver.rs  mod.rs
zigbee-mac/src/cc26xx/: mod.rs
zigbee-mac/src/efr32/: driver.rs  mod.rs  rac_seq.rs
zigbee-mac/src/efr32s2/: driver.rs  mod.rs
zigbee-mac/src/esp/: driver.rs  mod.rs
zigbee-mac/src/mock/: mod.rs
zigbee-mac/src/nrf/: mod.rs
zigbee-mac/src/phy6222/: driver.rs  mod.rs
zigbee-mac/src/stm32wb/: mod.rs
zigbee-mac/src/telink/: driver.rs  mod.rs
zigbee-nwk/: Cargo.toml
zigbee-nwk/src/: frames.rs  indirect.rs  lib.rs  neighbor.rs  nib.rs  nlde.rs  nlme.rs  nwk_commands.rs  routing.rs  security.rs
zigbee-runtime/: Cargo.toml
zigbee-runtime/src/: builder.rs  event_loop.rs  firmware_writer.rs  lib.rs  log_nv.rs  nv_storage.rs  ota.rs  power.rs  templates.rs
zigbee-types/: Cargo.toml
zigbee-types/src/: lib.rs
zigbee-zcl/: Cargo.toml
zigbee-zcl/src/: attribute.rs  data_types.rs  frame.rs  lib.rs  reporting.rs
zigbee-zcl/src/clusters/: alarms.rs  basic.rs  color_control.rs  diagnostics.rs  door_lock.rs  electrical.rs  fan_control.rs  flow_measurement.rs  green_power.rs  groups.rs  humidity.rs  ias_ace.rs  ias_wd.rs  ias_zone.rs  identify.rs  illuminance.rs  level_control.rs  metering.rs  mod.rs  multistate_input.rs  occupancy.rs  on_off.rs  on_off_switch_config.rs  ota.rs  ota_image.rs  poll_control.rs  power_config.rs  pressure.rs  scenes.rs  temperature.rs  thermostat.rs  thermostat_ui.rs  time.rs  touchlink.rs  window_covering.rs
zigbee-zcl/src/foundation/: default_response.rs  discover.rs  mod.rs  read_attributes.rs  reporting.rs  write_attributes.rs
zigbee-zdo/src/: binding_mgmt.rs  descriptors.rs  device_announce.rs  discovery.rs  handler.rs  lib.rs  network_mgmt.rs
zigbee/src/: coordinator.rs  lib.rs  router.rs  trust_center.rs
