[package]
name = "bl702-sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
zigbee-types = { path = "../../zigbee-types" }
zigbee-mac = { path = "../../zigbee-mac", features = ["bl702"] }
zigbee-nwk = { path = "../../zigbee-nwk" }
zigbee-aps = { path = "../../zigbee-aps" }
zigbee-zcl = { path = "../../zigbee-zcl" }
zigbee-runtime = { path = "../../zigbee-runtime" }

# BL702 HAL and PAC
bl702-pac = "0.1"
bl702-hal = "0.0.3"

# Embassy async runtime
embassy-executor = { version = "0.7", features = ["task-arena-size-65536"] }
embassy-time = "0.4"
static_cell = "2"

# Panic handler for embedded target
panic-halt = "1.0"

# Embedded HAL traits (for I2C sensor drivers)
embedded-hal = "1.0"

[profile.release]
opt-level = "s"
lto = true
