[package]
name = "bl702-sensor"
version = "0.1.0"
edition = "2024"

[dependencies]
zigbee-types = { path = "../../zigbee-types" }
zigbee-mac = { path = "../../zigbee-mac", features = ["bl702"] }
zigbee-nwk = { path = "../../zigbee-nwk" }
zigbee-aps = { path = "../../zigbee-aps" }
zigbee-zcl = { path = "../../zigbee-zcl" }
zigbee-runtime = { path = "../../zigbee-runtime" }

# BL702 PAC (register-level access for clock/GPIO init)
bl702-pac = "0.0.3"

# Panic handler for embedded target
panic-halt = "1.0"

[profile.release]
opt-level = "s"
lto = true
