[package]
name = "esp32c6-sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
zigbee-types = { path = "../../zigbee-types" }
zigbee-mac = { path = "../../zigbee-mac", features = ["esp32c6"] }
zigbee-nwk = { path = "../../zigbee-nwk" }
zigbee-aps = { path = "../../zigbee-aps" }
zigbee-zcl = { path = "../../zigbee-zcl" }
zigbee-runtime = { path = "../../zigbee-runtime" }

# ESP32-C6 HAL and runtime
esp-hal = { version = "1.0.0-beta.0", features = ["esp32c6"] }
esp-hal-embassy = { version = "0.7", features = ["esp32c6"] }
esp-ieee802154 = { version = "0.4", features = ["esp32c6"] }
esp-backtrace = { version = "0.14", features = ["esp32c6", "panic-handler", "println"] }
esp-println = { version = "0.12", features = ["esp32c6"] }
embassy-executor = { version = "0.7", features = ["task-arena-size-65536"] }
embassy-time = "0.4"
static_cell = "2"

# I2C sensor drivers (embedded-hal compatible)
sht3x = "0.3"       # SHT31 temperature/humidity (I2C)
embedded-hal = "1.0"
embedded-hal-async = "1.0"

[profile.release]
opt-level = "s"
lto = true
