[package]
name = "mock-sleepy-sensor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mock-sleepy-sensor"
path = "src/main.rs"

[dependencies]
zigbee-types = { path = "../../zigbee-types" }
zigbee-mac = { path = "../../zigbee-mac", features = ["mock"] }
zigbee-nwk = { path = "../../zigbee-nwk" }
zigbee-aps = { path = "../../zigbee-aps" }
zigbee-zcl = { path = "../../zigbee-zcl" }
zigbee-runtime = { path = "../../zigbee-runtime" }
pollster = "0.4"
