[package]
name = "nrf52840-sensor-uf2"
version = "0.1.0"
edition = "2021"

[features]
default = ["board-promicro"]
# Board selection (pick exactly one):
board-promicro  = []  # TENSTAR ROBOT ProMicro nRF52840 / nice!nano (SoftDevice S140)
board-mdk       = []  # Makerdiary nRF52840 MDK USB Dongle (no SoftDevice)
board-nrf-dongle = [] # Nordic PCA10059 nRF52840 Dongle (no SoftDevice)
board-nrf-dk     = [] # Nordic nRF52840 DK (PCA10056) — no bootloader, J-Link debug
# External I2C sensor (enable when BME280 is wired: SDA=P0.26, SCL=P0.27):
sensor-bme280   = []  # Bosch BME280 temperature + humidity + pressure

[dependencies]
zigbee-types = { path = "../../zigbee-types" }
zigbee-mac = { path = "../../zigbee-mac", features = ["nrf52840"] }
zigbee-nwk = { path = "../../zigbee-nwk" }
zigbee-aps = { path = "../../zigbee-aps" }
zigbee-zcl = { path = "../../zigbee-zcl" }
zigbee-runtime = { path = "../../zigbee-runtime" }

# nRF52840 Embassy HAL
embassy-nrf = { version = "0.3", features = ["nrf52840", "time-driver-rtc1", "gpiote"] }
embassy-executor = { version = "0.7", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread"] }
embassy-time = "0.4"
embassy-futures = "0.1"
static_cell = "2"
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
embedded-hal = "1.0"
log = "0.4"

[profile.release]
opt-level = "s"
lto = true
debug = 2
